Split Daikon run in two commands to control Xmx